GMM_Main/src/objects/Fund_Commitment__c.object
<CustomObject>
    <description>User Story 759 for Selecting the funding strip(Source) from the NOFO Object</description>
    <fields>
        <fullName>ACTY_ID__c</fullName>
        <label>ACTY ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>Fund Commitment</relationshipLabel>
        <relationshipName>Fund_Commitment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BDOB_ID__c</fullName>
        <label>BDOB ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beginning_FY__c</fullName>
        <description>Beginning FY – Read only. [See Parse below]
o   Parse Fiscal Year Basis string into “Start FY” (numeric), “End FY” (numeric) and “Fund” (alpha-numeric).</description>
        <label>Beginning FY</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change__c</fullName>
        <label>Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Amount__c</fullName>
        <label>Current Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_FY__c</fullName>
        <label>End FY</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ending_FY__c</fullName>
        <label>Ending FY</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FUND_ID__c</fullName>
        <label>FUND ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <description>Fund – Read only. [See Parse below]
o   Parse Fiscal Year Basis string into “Start FY” (numeric), “End FY” (numeric) and “Fund” (alpha-numeric).
o   Populate with “Fund” value</description>
        <label>Fund</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Location__c</fullName>
        <label>Grant Location</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRN_UIDY_ID__c</fullName>
        <label>MRN UIDY ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Total__c</fullName>
        <label>New Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ORGN_ID__c</fullName>
        <label>ORGN ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Class__c</fullName>
        <label>Object Class</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PARN_OF_LINE_ID__c</fullName>
        <label>PARN OF LINE ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROG_ID__c</fullName>
        <label>PROG ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_FY__c</fullName>
        <label>Start FY</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <label>Fund Commitment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Fund Commitment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fund Commitment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>